<resources>
    <string name="app_name">Words</string>
    <string name="button_study">Study</string>
    <string name="button_words">Words</string>
    <string name="button_new_word">New word</string>
    <string name="help_translation">Your opinion</string>
    <string name="button_check">Check</string>
    <string name="button_next">Next</string>
    <string name="test_word">Hello!</string>

    <string name="end_text">Congratulations this is the end of the lesson!</string>
    <string name="add_word">Add word</string>
</resources>