<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        tools:context=".study.StudyWord">

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
    >

        <TextView
                android:id="@+id/word_origin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="64sp"
                tools:text="@string/test_word"
        />
    </LinearLayout>

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
    >
        <EditText
                android:layout_width="280dp"
                android:layout_height="match_parent"
                android:hint="@string/help_translation"
                />
    </LinearLayout>

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
    >

        <Button
                android:id="@+id/button_check"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:text="@string/button_check"
        />
        <Button
                android:id="@+id/button_next"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:text="@string/button_next"
        />
    </LinearLayout>
</LinearLayout>